# chatterbook

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/chatterbook/: __init__.py  converter.py  epub.py  exceptions.py  styles.py
tests/: test_converter.py  test_epub.py
